# zeroclaw-depin-plugins

plugins/depin-claim-builder/: Cargo.toml  manifest.toml
plugins/depin-claim-builder/src/: depin.rs  lib.rs
plugins/depin-hotspot-status/: Cargo.toml  README.md  manifest.toml
plugins/depin-hotspot-status/src/: depin.rs  lib.rs
plugins/depin-network-health/: Cargo.toml  manifest.toml
plugins/depin-network-health/src/: depin.rs  lib.rs
