[package]
name = "depin-claim-builder"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "ZeroClaw DePIN tool plugin (T1): Build unsigned Helium rewards claim transaction"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
