[package]
name = "depin-network-health"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "ZeroClaw DePIN tool plugin (T0): Monitor Helium/Hivemapper network health, epochs, reward rates"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
